// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureCard Displays a draggable card with accessibility pattern 1`] = `
<div
  class=""
  data-element-id="100"
  data-tlp-tooltip=""
  draggable="true"
>
  <div
    class="element-card element-card-lake_placid_blue element-draggable-item element-card-background-peggy_pink_text element-card-with-accessibility"
  >
    <div
      class="element-card-content"
    >
      <div
        class="element-card-xref-label"
      >
        <a
          class="element-card-xref element-card-xref-lake_placid_blue"
          data-not-drag-handle="true"
          href="/plugins/tracker/?aid=100"
        >
          
                    
                
        </a>
         
        <span
          class="element-card-label"
        >
          My artifact
        </span>
      </div>
    </div>
     
    <div
      class="element-card-accessibility"
    />
  </div>
</div>
`;

exports[`FeatureCard Displays a not draggable card when feature has planned user stories 1`] = `
<div
  class="tlp-tooltip tlp-tooltip-left"
  data-element-id="100"
  data-tlp-tooltip="The feature has elements planned in team project, it can not be unplanned"
  draggable="false"
>
  <div
    class="element-card element-card-lake_placid_blue"
  >
    <div
      class="element-card-content"
    >
      <div
        class="element-card-xref-label"
      >
        <a
          class="element-card-xref element-card-xref-lake_placid_blue"
          data-not-drag-handle="true"
          href="/plugins/tracker/?aid=100"
        >
          
                    
                
        </a>
         
        <span
          class="element-card-label"
        >
          My artifact
        </span>
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`FeatureCard Displays a not draggable card without accessibility pattern 1`] = `
<div
  class=""
  data-element-id="100"
  data-tlp-tooltip=""
  draggable="true"
>
  <div
    class="element-card element-card-lake_placid_blue"
  >
    <div
      class="element-card-content"
    >
      <div
        class="element-card-xref-label"
      >
        <a
          class="element-card-xref element-card-xref-lake_placid_blue"
          data-not-drag-handle="true"
          href="/plugins/tracker/?aid=100"
        >
          
                    
                
        </a>
         
        <span
          class="element-card-label"
        >
          My artifact
        </span>
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;
